ecmascript/parser/tests/test262-error-references/fail/d82c20dfe6ce915a.js.stderr
error: Unexpected token `,`. Expected identifier, string literal, numeric literal or [ for the computed key
 --> $DIR/tests/test262-parser/fail/d82c20dfe6ce915a.js:1:5
  |
1 | ({a,,a} = 0)
  |     ^

